--- a/HDL-Batch-installer-SRC/manifest.rc
+++ b/HDL-Batch-installer-SRC/manifest.rc
@@ -1,4 +1,5 @@
-1 24 manifest.bin
+
+1        RT_MANIFEST  "manifest.bin"
 /**
  *Embedded windows manifest to automatically request Administrative priviledges
  *Needed to save the user the job of executing as edmin manually, since HDLDump write-features won't work without admin mode
