--- a/HDL-Batch-installer-SRC/HDL-Batch-installer.cbp
+++ b/HDL-Batch-installer-SRC/HDL-Batch-installer.cbp
@@ -325,7 +325,7 @@ implementar switch para buscar HASH en tabla interna o redirigir a redump.org
 			<AutoVersioning>
 				<Scheme minor_max="90" build_max="0" rev_max="0" rev_rand_max="10" build_times_to_increment_minor="400" />
 				<Settings autoincrement="0" date_declarations="1" use_define="0" update_manifest="0" do_auto_increment="0" ask_to_increment="0" language="C++" svn="0" svn_directory="" header_path="version.h" />
-				<Changes_Log show_changes_editor="0" app_title="[v%M.%m.%b - Revision %r]" changeslog_path="_bin\Debug\changes.log" />
+				<Changes_Log show_changes_editor="0" app_title="[v%M.%m.%b - Revision %r]" changeslog_path="_bin\playground\changes.log" />
 				<Code header_guard="VERSION_H" namespace="AutoVersion" prefix="" />
 			</AutoVersioning>
 			<lib_finder disable_auto="1" />
