--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ HDL-Batch-installer-SRC/_obj/**
 HDL-Batch-installer-SRC/_bin/playground/Common/_ICN.7z
 HDL-Batch-installer-SRC/_bin/playground/Common/Icons.INI
 HDL-Batch-installer-SRC/_bin/playground/gamename.DB
+HDL-Batch-installer-SRC/_bin/playground/Common/_ICN.7z
+HDL-Batch-installer-SRC/_bin/playground/Common/Icons.INI
