--- a/.github/workflows/Repack-and-release.yml
+++ b/.github/workflows/Repack-and-release.yml
@@ -30,25 +30,20 @@ jobs:
       run: |
         sudo apt-get install gettext p7zip dos2unix
 
-
     - name: get version from changelog
       shell: bash
-      run: echo "::set-output name=string::$(grep -m1 '\[*\]' Release/changes.log | sed 's/\[//' | sed 's/\]//' | awk '{$1=$1;print}')"
+      run: echo ":VERSION=$(grep -m1 '\[*\]' Release/changes.log | sed 's/\[//' | sed 's/\]//' | awk '{$1=$1;print}')" >> $GITHUB_ENV
       id: version
-      
+
     - name: get version from changelog as release tag
       shell: bash
-      run: echo "::set-output name=version_tag::$(grep -m1 '\[*\]' Release/changes.log | sed 's/\[//' | sed 's/\]//' | sed -r 's/\s+//g' | sed 's/Aniversary/aniv/' | sed 's/Revision/rev/' | sed 's/Release/rel/'| awk '{$1=$1;print}')"
+      run: echo "VERSION_TAG=$(grep -m1 '\[*\]' Release/changes.log | sed 's/\[//' | sed 's/\]//' | sed -r 's/\s+//g' | sed 's/Aniversary/aniv/' | sed 's/Revision/rev/' | sed 's/Release/rel/'| awk '{$1=$1;print}')" >> $GITHUB_ENV
       id: tag
-            
+
     - name: Download Latest HDL-Dump
       run: |
         cd Release
         wget https://github.com/israpps/hdl-dump/releases/download/hdlinst/HDL.EXE -O $PWD/HDL.EXE
-
-    - name: unpack icons
-      run: |
-        7z x -oRelease/Common/ -pPDPA svr/_ICN.7z
 
     - name: Trim changes of latest version
       run: |
@@ -63,6 +58,7 @@ jobs:
         echo "----------------CHANGELOG----------------"
         cat latest_changes.log
         echo "----------------CHANGELOG----------------"
+
     - name: Compile translation catalogs
       run: |
         cd translations
@@ -84,7 +80,7 @@ jobs:
         unix2dos HDL-Batch-installer.BAT
         cd Common
         unix2dos config.INI
-        
+
     - name: delete previous tag/release
       if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main')
       uses: dev-drprasad/delete-tag-and-release@v0.2.0
@@ -93,11 +89,11 @@ jobs:
         tag_name: Latest
       env:
        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        
+
     - name: Repack latest x64 build
       run: |
         SCH=${GITHUB_SHA::7}
-        REF=${{ steps.tag.outputs.version_tag }}
+        REF=${{ env.VERSION_TAG }}
         cd Release
         cd Common
         echo commit $SCH>commit.sys
@@ -107,13 +103,13 @@ jobs:
         cd ..
         cp COPYING.* Release/
         cp LICENSE Release/LICENSE
-        cp -r Release "HDLBInst[${{ steps.version.outputs.string }}-x64]"
+        cp -r Release "HDLBInst[${{ env.VERSION }}-x64]"
         7z a -t7z -r HDLBInst-x64-$REF.7z HDLBInst*x64*/*
 
     - name: Repack latest x86 build
       run: |
         SCH=${GITHUB_SHA::7}
-        REF=${{ steps.tag.outputs.version_tag }}
+        REF=${{ env.VERSION_TAG }}
         cd Release
         cd Common
         echo 32bits build >>commit.sys
@@ -121,7 +117,7 @@ jobs:
         cd ..
         rm Release/HDL-Batch-installer.exe
         cp Release32/HDL-Batch-installer.exe Release/HDL-Batch-installer.exe
-        mv Release "HDLBInst[${{ steps.version.outputs.string }}-x86]"
+        mv Release "HDLBInst[${{ env.VERSION }}-x86]"
         7z a -t7z -r HDLBInst-x86-$REF.7z HDLBInst*x86*/*
 
 
@@ -145,22 +141,10 @@ jobs:
              HDLBInst*x86*.7z
              Translation-template.7z
              NBD.zip
-        name: "${{ steps.version.outputs.string }}"
+        name: "${{ env.VERSION }}"
         tag_name: "Latest"
         body_path: 'latest_changes.log'
         prerelease: false
-
-#    - name: Deploy pre-release (legacy)
-#      if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main')
-#      uses: marvinpinto/action-automatic-releases@latest
-#      with:
-#        prerelease: true
-#        repo_token: "${{ secrets.GITHUB_TOKEN }}"
-#        automatic_release_tag: "Latest"
-#        title: "${{ steps.version.outputs.string }}"
-#        files: |
-#              HDLBInst*.7z
-#              Translation-template.7z
 
   discord_webhooks:
     needs: Repack_and_Release
@@ -175,7 +159,7 @@ jobs:
       shell: bash
       run: echo "::set-output name=string::$(grep -m1 '\[*\]' Release/changes.log | sed 's/\[//' | sed 's/\]//' | awk '{$1=$1;print}')"
       id: version
-      
+
     - name: get version from changelog as release tag
       shell: bash
       run: echo "::set-output name=version_tag::$(grep -m1 '\[*\]' Release/changes.log | sed 's/\[//' | sed 's/\]//' | sed -r 's/\s+//g' | sed 's/Revision/rev/' | sed 's/Release/rel/' | awk '{$1=$1;print}')"
@@ -185,20 +169,20 @@ jobs:
       uses: actions/download-artifact@v1
       with:
         name: HDL-INST
-        
+
     - name: Discord Webhook, Latest release
       if: github.event_name == 'push'
       uses: tsickert/discord-webhook@v2.0.2
       with:
         webhook-url: ${{ secrets.TESTERS_WEBHOOK }}
-        content: "<@&859572447761793034> & <@&859615291477590046> , HDL Batch Installer has been updated some minutes ago\\n according to changelog: **[${{ steps.version.outputs.string }}]** \\n as always, you can download the latest version from here:\\n https://github.com/israpps/HDL-Batch-installer/releases/tag/Latest \\n or <#863913236457062421>"
+        content: "<@&859572447761793034> & <@&859615291477590046> , HDL Batch Installer has been updated some minutes ago\\n according to changelog: **[${{ env.VERSION }}]** \\n as always, you can download the latest version from here:\\n https://github.com/israpps/HDL-Batch-installer/releases/tag/Latest \\n or <#863913236457062421>"
 
     - name: Discord Webhook, Latest release
       if: github.event_name == 'repository_dispatch'
       uses: tsickert/discord-webhook@v2.0.2
       with:
         webhook-url: ${{ secrets.TESTERS_WEBHOOK }}
-        content: "<@&859572447761793034> & <@&859615291477590046> , HDL Batch Installer **[${{ steps.version.outputs.string }}]** Has been **re-released** because **HDL Dump was updated** some minutes ago \\n as always, you can download the latest version from here:\\n https://github.com/israpps/HDL-Batch-installer/releases/tag/Latest \\n or <#863913236457062421>"
+        content: "<@&859572447761793034> & <@&859615291477590046> , HDL Batch Installer **[${{ env.VERSION }}]** Has been **re-released** because **HDL Dump was updated** some minutes ago \\n as always, you can download the latest version from here:\\n https://github.com/israpps/HDL-Batch-installer/releases/tag/Latest \\n or <#863913236457062421>"
 
 
     - name: Upload release to discord backup
@@ -207,4 +191,4 @@ jobs:
         DISCORD_WEBHOOK: ${{ secrets.BACKUP_WEBHOOK }}
       with:
         args: HDL-INST/HDLBInst*.7z
-        
+
