--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ HDL-Batch-installer-SRC/_bin/playground/Common/Icons.INI
 HDL-Batch-installer-SRC/_bin/playground/gamename.DB
 HDL-Batch-installer-SRC/_bin/playground/Common/_ICN.7z
 HDL-Batch-installer-SRC/_bin/playground/Common/Icons.INI
+HDL-Batch-installer-SRC/Lang/*.mo
