--- a/.github/workflows/translators_webhooks.yml
+++ b/.github/workflows/translators_webhooks.yml
@@ -4,6 +4,7 @@ on:
   push:
     paths:
       - 'translations/HDLBinst.pot'
+      - '.github/workflows/translators_webhooks.yml'
 jobs:
   message:
     if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
@@ -12,5 +13,6 @@ jobs:
     - name: Discord Webhook Action
       uses: tsickert/discord-webhook@v2.0.2
       with:
+        username: GitHub
         webhook-url: ${{ secrets.TRANSLATORS_WEBHOOK }}
         content: "<@&859525897656729611>, The translation template has been updated! \\n as always, you can download it from github https://github.com/israpps/HDL-Batch-installer/releases/download/Latest/Translation-template.7z \\n or using the automatic download batch file pinned on <#859593073466015765> "
