--- a/.github/ISSUE_TEMPLATE/common_issue.yml
+++ b/.github/ISSUE_TEMPLATE/common_issue.yml
@@ -48,7 +48,7 @@ body:
       render: shell
 
   - type: dropdown
-    id: version
+    id: bits
     attributes:
       label: "In which package have you experienced this issue?"
       multiple: true
